--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/wangdong121993/koa-node#readme",
   "dependencies": {
     "koa": "^2.5.3"
+  },
+  "devDependencies": {
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa2": "^2.0.0-alpha.7"
   }
 }
